# CyberYJ

./: .gitignore  README-MCP-CONFIG.md  README.md  demo_cli.py  demo_mcp_dispatch.py  mcp-config-cursor.json  mcp-config-vscode.json  pyproject.toml  run_http_api.py  run_server.py  test_server.py  testmcp.json
.claude/: settings.local.json
Wechat-ZY/: README.md  app.json  project.config.json  sitemap.json
data/: README.md
docs/: completion-report.md  final-report.md  m4-acceptance-report.md  m4-checklist.md  m4-final-closeout-report.md  m4-p2-convention-gap-report.md  m4-p2-effective-local-kb-report.md  m4-p2-local-kb-report.md  m4-p2-source-compliance-report.md  m4-p3-rule-review-record.md  m4-p4-final-authority-replacement-report.md  m4-secondary-evidence-template.md  mcp-client-configs.md  mcp-server-guide.md  project-progress.md  quality_comparison_report.md  requirements.md  source-change-audit-template.md
examples/: demo_solar_calculator.py  hexagram_analyzer_demo.py  luopan_demo.py
schemas/: mcp-tools.json
scripts/: check_authoritative_convention_gap.py  check_authoritative_coverage.py  check_authoritative_local_kb.py  check_authoritative_local_kb_effective.py  check_authoritative_locator_precision.py  check_authoritative_locator_precision_full.py  check_authoritative_locator_quality.py  check_rule_review_evidence.py  check_rule_review_final_authority.py  check_rule_review_precheck.py  check_rule_review_progress.py  check_rule_review_secondary_gate.py  check_source_compliance.py  check_source_compliance_extended.py  check_source_evidence.py  check_source_ref_integrity.py  generate_authoritative_convention_gap_report.py  (+9 more)
(+163 files in other folders)
